# hub-src

./: .gitignore  .hub  Makefile  README  Version.hs  emacs-X11.exe.stackdump  help.txt  hub-src  hub-src.har  hub.cabal  hub.hs  makefile  prep.hs  test.xml
Distribution/Hub/: CL.hs  Parse.hs
Hub/: Build.hs  CL.hs  CommandLine.hs  Commands.hs  Directory.hs  Discover.hs  FilePaths.hs  Help.hs  HelpText.hs  Hub.hs  Misc.hs  Oops.hs  PackageDB.hs  Parse.hs  Poss.hs  Prog.hs  SaveLoad.hs  System.hs
Hub/Directory/: Allocate.hs
man/: Makefile  hub-1.txt  hub-5.txt  hub.1  hub.5  hub.txt
x/: CommandLine.hs  lock.hs  pastebin.hs  test.hub
