Name:                   hub
Version:                1.0.0
Copyright:              Chris Dornan, 2011-2012
Maintainer:             Chris Dornan <chris@chrisdornan.com>
Author:                 Chris Dornan <chris@chrisdornan.com>
License:                BSD3
License-file:           LICENSE
Synopsis:               This package provides a utility for multiplexing 
                        multiple GHC and Haskell Platform installations, 
                        the installation being selected by environment 
                        variable or a hidden configuraton file or in the 
                        current working directory or one of its parents. 

                        Thye utility also allows users to build 
                        sandboxes (called hubs) which may link to one of 
                        the the GHC installtions installed on the local 
                        system, and extend them with packages private to 
                        the hub. 

                        Utilities are also provided for erasing packages 
                        from an hub and annotating, duplicating, 
                        renaming, locking, archiving and recovering 
                        hubs. 

Stability:              Beta
Category:               Development, Distribution
Homepage:               https://github.com/cdornan/hub
Build-type:             Simple
Cabal-version:          >= 1.10

Source-repository       head
    type:               git
    location:           git@github.com:cdornan/hub.git

Executable              hub
    Main-is:            hub.hs
    Build-depends:      base            >= 4.0 && < 5,
                        hexpat          >= 0.19,
                        regex-compat,
                        containers,
                        unix,
                        filepath,
                        directory,
                        process,
                        bytestring,
                        fgl,
                        utf8-string,
                        array
    Other-modules:      Hub.CommandLine
                        Hub.Commands
                        Hub.SaveLoad
                        Hub.Directory
                        Hub.Discover
                        Hub.FilePaths
                        Hub.Help
                        Hub.HelpText
                        Hub.Hub
                        Hub.Oops
                        Hub.PackageDB
                        Hub.Parse
                        Hub.Prog
                        Hub.System
                        Hub.Poss
    GHC-options:        -Wall
    Default-language:   Haskell2010
